// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VariantButton overview 0 snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); font-size: 27px; padding: 10px 20px; border-radius: 8px; border: 1px solid #000000; display: flex; flex-direction: row; align-items: center;"
  >
    <div
      style="padding: 0px 10px;"
    >
      Josue Beier III
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton overview 1 snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); font-size: 19px; padding: 10px 20px; border-radius: 8px; border: 1px solid #000000; display: flex; flex-direction: row; align-items: center;"
  >
    <div
      style="padding: 0px 10px;"
    >
      Darrel Kuhn
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton overview 2 snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); font-size: 29px; padding: 10px 20px; border-radius: 8px; border: 1px solid #000000; display: flex; flex-direction: row; align-items: center;"
  >
    <div
      style="padding: 0px 10px;"
    >
      Dessie Gleichner
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton overview 3 snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); font-size: 30px; padding: 10px 20px; border-radius: 8px; border: 1px solid #000000; display: flex; flex-direction: row; align-items: center;"
  >
    <div
      style="padding: 0px 10px;"
    >
      Rafaela Heaney
    </div>
  </button>
</DocumentFragment>
`;

exports[`VariantButton overview 4 snapshot 1`] = `
<DocumentFragment>
  <button
    style="color: rgb(242, 242, 242); background-color: rgb(47, 128, 237); font-size: 19px; padding: 10px 20px; border-radius: 8px; border: 1px solid #000000; display: flex; flex-direction: row; align-items: center;"
  >
    <div
      style="padding: 0px 10px;"
    >
      Frida Adams
    </div>
  </button>
</DocumentFragment>
`;
